<resources>
    <string name="app_name">demo</string>
    <string name="button">Button</string>
    <string name="on_off">on/off</string>
    <string name="b_t_t_t">Bật Tắt</string>
    <string name="wifi">Wifi</string>
    <string name="i_u_khi_n">Điều khiển</string>
    <string name="tr_ng_th_i">trạng thái</string>
    <string name="hen_gio">hen gio</string>
    <string name="textview">TextView</string>
    <string name="vong_lap">vong lap</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_12">12</string>
    <string name="_48">48</string>
    <string name="_11">11</string>
    <string name="_24">24</string>
    <string name="_72">72</string>
    <string name="_10">10</string>
    <string name="t_nh_tr_ng_c_a_c_y">Tình trạng của cây</string>
    <string name="ng_y_b_n_ph_n">ngày bón phân</string>
    <string name="h_n_gi_t_i_c_y">Hẹn giờ tưới cây</string>
    <string name="t_gi_t_i_l_n_th_2">Đặt giờ tưới lần thứ 2</string>
    <string name="t_gi_t_i_l_n_th_nh_t">Đặt giờ tưới lần thứ nhất</string>
    <string name="t_l_ch_b_n_ph_n">Đặt Lịch Bón Phân</string>
    <string name="m_kh_ng_kh">Độ ẩm không khí</string>
    <string name="nhi_t_kh_ng_kh">Nhiệt độ không khí</string>
    <string name="m_t">Độ ẩm đất</string>
    <string name="textviewnhietdo">TextViewNhietdo</string>
    <string name="textview1doamkk">TextViewDoamkk</string>
    <string name="textviewdoamdat">TextViewDoamdat</string>
    <string name="textviewanhsang">TextViewAnhsang</string>
    <string name="c_ng_nh_s_ng">Cường độ ánh sáng</string>
    <string name="todo">TODO</string>

</resources>
