<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#03A9F4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewNoiDung"
        android:layout_width="116dp"
        android:layout_height="61dp"
        android:background="#73A5CD"
        android:text="@string/i_u_khi_n"
        android:textColor="#FF5722"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Switch
        android:id="@+id/switchWifi"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:background="#FFFFFF"
        android:backgroundTint="#F4DC09"
        android:text="@string/wifi"
        android:textColor="#ED0252"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/h_n_gi_t_i_c_y"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoiDung" />

    <Button
        android:id="@+id/buttonTrangthai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:text="@string/t_nh_tr_ng_c_a_c_y"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="60dp"-->
<!--        android:text="Demo"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textViewNoiDung"-->
<!--        tools:layout_editor_absoluteX="176dp" />-->


</androidx.constraintlayout.widget.ConstraintLayout>